--- a/index.html
+++ b/index.html
@@ -1,16 +1,3 @@
-<script type="importmap">
-{
-  "imports": {
-    "recharts": "https://esm.sh/recharts@^3.6.0",
-    "firebase/": "https://esm.sh/firebase@^12.8.0/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.36.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3"
-  }
-}
-</script>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -37,5 +24,70 @@
       background-color: var(--bg-main);
       color: #111827;
       background-image: 
-        linear-gradient(rgba(229, 231, 235, 0.1) 1px, transparent 1px),
-        linear-gradient(90deg, rgba(229, 231, 235, 0.1
+        linear-gradient(rgba(229, 231, 235, 0.2) 1px, transparent 1px),
+        linear-gradient(90deg, rgba(229, 231, 235, 0.2) 1px, transparent 1px);
+      background-size: 60px 60px;
+      background-attachment: fixed;
+      -webkit-font-smoothing: antialiased;
+      letter-spacing: 0.02em;
+    }
+    .font-mono {
+      font-family: 'JetBrains Mono', monospace;
+      letter-spacing: 0.05em;
+    }
+    input, textarea, select {
+      background-color: var(--bg-input) !important;
+      border: 1px solid #e5e7eb !important;
+      color: #111827 !important;
+      transition: all 0.3s cubic-bezier(0.16, 1, 0.3, 1);
+    }
+    input:focus {
+      border-color: #000 !important;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05) !important;
+      outline: none;
+    }
+    .report-typography h3 {
+      font-weight: 900;
+      color: #000;
+      border-left: 6px solid #000;
+      padding: 0.4rem 0 0.4rem 1.5rem;
+      margin: 3rem 0 1.5rem 0;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+    }
+    .metric-card {
+      overflow: visible !important;
+      min-height: 180px;
+    }
+    .custom-scrollbar::-webkit-scrollbar {
+      width: 4px;
+    }
+    .custom-scrollbar::-webkit-scrollbar-thumb {
+      background: #e5e7eb;
+      border-radius: 10px;
+    }
+  </style>
+  <script type="importmap">
+{
+  "imports": {
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.475.0",
+    "recharts": "https://esm.sh/recharts@3.6.0",
+    "@google/genai": "https://esm.sh/@google/genai@1.36.0",
+    "firebase/app": "https://esm.sh/firebase@11.1.0/app",
+    "firebase/firestore": "https://esm.sh/firebase@11.1.0/firestore",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "firebase/": "https://esm.sh/firebase@^12.8.0/"
+  }
+}
+</script>
+<link rel="stylesheet" href="/index.css">
+</head>
+<body>
+  <div id="root"></div>
+<script type="module" src="/index.tsx"></script>
+</body>
+</html>
