--- a/index.html
+++ b/index.html
@@ -8,64 +8,69 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --bg-main: #fcfcfc;
-      --bg-card: #ffffff;
-      --bg-input: #ffffff;
-      --border-accent: #f3f4f6;
-      --matrix-blue: #000000;
-      --matrix-glow: 0 10px 30px rgba(0, 0, 0, 0.03);
-      --accent-color: #bef264; 
+      --bg-main: #ffffff;
+      --matrix-green: #bef264;
+      --text-gray: #888888;
+      --grid-line: #f5f5f5;
     }
     body {
       font-family: 'Inter', sans-serif;
       background-color: var(--bg-main);
-      color: #111827;
+      color: #000;
       background-image: 
-        linear-gradient(rgba(229, 231, 235, 0.2) 1px, transparent 1px),
-        linear-gradient(90deg, rgba(229, 231, 235, 0.2) 1px, transparent 1px);
-      background-size: 60px 60px;
+        linear-gradient(var(--grid-line) 1px, transparent 1px),
+        linear-gradient(90deg, var(--grid-line) 1px, transparent 1px);
+      background-size: 80px 80px;
       background-attachment: fixed;
       -webkit-font-smoothing: antialiased;
-      letter-spacing: 0.02em;
     }
-    .font-mono {
-      font-family: 'JetBrains Mono', monospace;
-      letter-spacing: 0.05em;
+    .mono { font-family: 'JetBrains Mono', monospace; }
+    .matrix-card {
+      background: white;
+      border: 1px solid #eeeeee;
+      padding: 24px;
+      transition: all 0.3s ease;
     }
-    input, textarea, select {
-      background-color: var(--bg-input) !important;
-      border: 1px solid #e5e7eb !important;
-      color: #111827 !important;
-      transition: all 0.3s cubic-bezier(0.16, 1, 0.3, 1);
+    .matrix-card:hover {
+      border-color: #000;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.05);
     }
-    input:focus {
-      border-color: #000 !important;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05) !important;
-      outline: none;
-    }
-    .report-typography h3 {
+    .status-tag {
+      font-size: 10px;
       font-weight: 900;
-      color: #000;
-      border-left: 6px solid #000;
-      padding: 0.4rem 0 0.4rem 1.5rem;
-      margin: 3rem 0 1.5rem 0;
+      padding: 2px 8px;
+      border-radius: 99px;
       text-transform: uppercase;
-      letter-spacing: 0.05em;
     }
-    .metric-card {
-      overflow: visible !important;
-      min-height: 180px;
+    .input-clean {
+      border-bottom: 2px solid #eee;
+      padding: 8px 0;
+      font-size: 24px;
+      font-weight: 900;
+      width: 100%;
+      outline: none;
+      transition: border-color 0.2s;
     }
-    .custom-scrollbar::-webkit-scrollbar {
-      width: 4px;
+    .input-clean:focus {
+      border-color: var(--matrix-green);
     }
-    .custom-scrollbar::-webkit-scrollbar-thumb {
-      background: #e5e7eb;
-      border-radius: 10px;
+    .sidebar-active {
+      background-color: var(--matrix-green);
+      color: #000;
+      position: relative;
     }
+    .sidebar-active::after {
+      content: '';
+      position: absolute;
+      right: 0; top: 0; bottom: 0;
+      width: 4px; background: #000;
+    }
+    h1, h2 { letter-spacing: -0.04em; }
+    .custom-scrollbar::-webkit-scrollbar { width: 4px; }
+    .custom-scrollbar::-webkit-scrollbar-thumb { background: #ddd; border-radius: 10px; }
   </style>
   <script type="importmap">
 {
@@ -73,13 +78,14 @@
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "lucide-react": "https://esm.sh/lucide-react@0.475.0",
-    "recharts": "https://esm.sh/recharts@3.6.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.475.0?external=react",
+    "recharts": "https://esm.sh/recharts@3.6.0?external=react,react-dom",
     "@google/genai": "https://esm.sh/@google/genai@1.36.0",
     "firebase/app": "https://esm.sh/firebase@11.1.0/app",
     "firebase/firestore": "https://esm.sh/firebase@11.1.0/firestore",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
+    "@firebase/app": "https://esm.sh/@firebase/app@^0.14.7",
     "firebase/": "https://esm.sh/firebase@^12.8.0/"
   }
 }
@@ -88,6 +94,7 @@
 </head>
 <body>
   <div id="root"></div>
+  <script type="module" src="index.tsx"></script>
 <script type="module" src="/index.tsx"></script>
 </body>
 </html>
