--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>The Matrix - AI 健身戰略家</title>
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#000000">
-  <link rel="icon" href="/logo.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/logo.png">
+  <!-- PWA Icons Updated -->
+  <link rel="icon" href="/logo-matrix.png" type="image/png">
+  <link rel="apple-touch-icon" href="/logo-matrix.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,24 +45,20 @@
     .custom-scrollbar::-webkit-scrollbar-thumb { background: #e2e8f0; }
     input[type="number"]::-webkit-inner-spin-button { display: none; }
   </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "lucide-react": "https://esm.sh/lucide-react@0.475.0?external=react",
-    "recharts": "https://esm.sh/recharts@3.6.0?external=react,react-dom",
-    "@google/genai": "https://esm.sh/@google/genai@1.36.0",
-    "firebase/app": "https://esm.sh/firebase@11.1.0/app",
-    "firebase/firestore": "https://esm.sh/firebase@11.1.0/firestore",
+    "@google/genai": "https://esm.sh/@google/genai@^1.37.0",
+    "url": "https://esm.sh/url@^0.11.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "firebase/": "https://esm.sh/firebase@^12.8.0/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "path": "https://esm.sh/path@^0.12.7",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "url": "https://esm.sh/url@^0.11.4"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3",
+    "recharts": "https://esm.sh/recharts@^3.6.0"
   }
 }
 </script>
